# AP-Operation-Manager

./: .gitignore  README.md  docker-compose.ci.yml  docker-compose.yml
backend/: demo_simulation.py  entrypoint.sh  generate_demo_invoices.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/versions/: 2026_03_04_0728-dcd583aba8c6_add_resolution_plans_and_automation_.py  2026_03_04_0904-66aa16ce2e4d_make_vendor_id_nullable.py
backend/app/: seed.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ai_chat.py  analytics.py  approvals.py  audit.py  (+9 more)
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  approval.py  audit.py  base.py  config.py  exception.py  goods_receipt.py  invoice.py  matching.py  purchase_order.py  resolution.py  user.py  vendor.py
backend/app/schemas/: analytics.py  approval.py  audit.py  common.py  config.py  exception.py  goods_receipt.py  invoice.py  purchase_order.py  resolution.py  user.py  vendor.py
backend/app/services/: action_handlers.py  ai_exception_resolver.py  ai_service.py  ai_summary.py  approval_service.py  audit_service.py  auto_resolution.py  chat_service.py  classification_service.py  compliance_engine.py  document_parser.py  duplicate_detection.py  email_service.py  email_template.py  exception_service.py  import_service.py  invoice_service.py  knowledge_base.py  learning_engine.py  match_service.py  ocr_service.py  pdf_report.py  resolution_orchestrator.py  s3_service.py  vendor_matcher.py
backend/app/tasks/: invoice_tasks.py
backend/tests/: conftest.py
(+68 files in other folders)
